<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.github.dawdler-series</groupId>
		<artifactId>dawdler-boot</artifactId>
		<version>1.0.6-jdk17-RELEASES</version>
	</parent>
	<artifactId>dawdler-boot-server</artifactId>
	<name>dawdler-boot-server</name>
	<dependencies>
		<dependency>
			<groupId>io.github.dawdler-series</groupId>
			<artifactId>dawdler-server</artifactId>
		</dependency>
		<dependency>
			<groupId>io.github.dawdler-series</groupId>
			<artifactId>dawdler-boot-classloader-core</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.boot.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.misc=dawdler.boot.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.perf=dawdler.boot.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.boot.classloader</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>